--- a/birdstyles.css
+++ b/birdstyles.css
@@ -16,14 +16,11 @@ article.tweet{
     border: 4px solid #c0deed;
     border-radius: 16px;
     padding:5px;
+    margin-bottom: 5px;
 }
 div.content{
-    width:10%;
-    /*margin:0 auto;*/
-    /*padding:10px;*/
+    width:100px;
     min-height:100px;
-    /*border: 2px solid #c0deed;
-    border-radius: 10px;*/
 }
 #img{
     width:100px;
@@ -31,11 +28,12 @@ div.content{
     margin: 0 auto;
 }
 div.wordzone{
-    width:90%;
+    width:100px;
     padding:10px;
-    /*height: 80px*/
+    margin: 0 auto;
+    margin-left: 100px;
+    margin-top: 40px;
 }
-div.box{
-    width:auto;
-    padding:10px;
+.floatleft{
+    float: left;
 }
